test/Execute/SyntaxErrorTest/raise_from_missing_expr.typh
"""stderr
syntax error: $FILE:9:23
  unknown tokens

    9 |  raise ValueError("x") from
                               ^^^^
"""

raise ValueError("x") from
